<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardElevation="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/specialty"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?colorPrimary"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="Nurse" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/atFacility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/at"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/specialty" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/facility"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="6dp"
            app:layout_constraintStart_toEndOf="@+id/atFacility"
            app:layout_constraintTop_toTopOf="@+id/atFacility"
            tools:text="Skilled Nursing Facility" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/startStartTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/start"
            app:layout_constraintTop_toBottomOf="@+id/facility"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/startTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="?colorSecondaryVariant"
            app:layout_constraintStart_toEndOf="@+id/startStartTime"
            app:layout_constraintTop_toTopOf="@+id/startStartTime"
            tools:text="Tue, 3 Jun 2008 11:05:30 GMT" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/toEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/end"
            app:layout_constraintTop_toBottomOf="@+id/startStartTime"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/endTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:textColor="?colorSecondaryVariant"
            app:layout_constraintStart_toEndOf="@+id/toEndTime"
            app:layout_constraintTop_toTopOf="@+id/toEndTime"
            tools:text="Tue, 3 Jun 2008 11:05:30 GMT" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>